Fix page layout and left-align post titles

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -51,7 +51,6 @@
   margin: 0 0 2em;
 
   &__title {
-    text-align: center;
     margin-bottom: 0;
   }
 
